# everydaynotes

./: .gitignore  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/xyz/v1an/everydaynotes/: CaptureCandidateDetector.kt  CaptureOverlayService.kt  CaptureTriggerActivity.kt  DouyinUrlExtractor.kt  EverydayNotesApi.kt  EverydayNotesApp.kt  FloatingCaptureButtonService.kt  MainActivity.kt  QuickCaptureTileService.kt  ScreenshotObserverService.kt  SettingsStore.kt
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/test/java/xyz/v1an/everydaynotes/: DouyinUrlExtractorTest.kt
backend/: pyproject.toml
backend/everydaynotes/: api.py  app.py  cli.py  db.py  douyin.py  models.py  ocr.py  security.py  services.py  settings.py  storage.py  worker.py
backend/tests/: conftest.py  test_api.py  test_worker.py
deploy/: everydaynotes-api.service  everydaynotes-worker.service  everydaynotes.env.example  nginx-everydaynotes.conf
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.test.ts  api.ts  styles.css  types.ts
