[project]
name = "everydaynotes-backend"
version = "0.1.0"
description = "Private capture and recall backend for EverydayNotes."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pillow>=10.4.0",
    "pytesseract>=0.3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["everydaynotes*"]
exclude = ["tests*", "var*"]
